other/AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 1
  labels:
    kiali_wizard: AuthorizationPolicy
  name: cars-v1
  namespace: travel-agency
  resourceVersion: "203603"
  uid: cc65e3fa-8226-4f76-80e7-beff86a2506b
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-agency/sa/travels
  selector:
    matchLabels:
      app: cars
      version: v1
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 1
  labels:
    kiali_wizard: AuthorizationPolicy
  name: deny-all-travel-agency
  namespace: travel-agency
  resourceVersion: "203604"
  uid: 9adc9639-7b03-4bee-ac89-91d4daf5cf5d
spec: {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 3
  labels:
    kiali_wizard: AuthorizationPolicy
  name: discounts-v1
  namespace: travel-agency
  resourceVersion: "205587"
  uid: 0a9e285d-2a1d-4f0b-b66c-f17c158b62ed
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-agency/sa/flights
        - cluster.local/ns/travel-agency/sa/cars
        - cluster.local/ns/travel-agency/sa/hotels
        - cluster.local/ns/travel-agency/sa/insurances
  selector:
    matchLabels:
      app: discounts
      version: v1
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 1
  labels:
    kiali_wizard: AuthorizationPolicy
  name: flights-v1
  namespace: travel-agency
  resourceVersion: "203607"
  uid: 225f6d5a-eff2-4706-8d35-f3dc02f751e0
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-agency/sa/travels
  selector:
    matchLabels:
      app: flights
      version: v1
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 1
  labels:
    kiali_wizard: AuthorizationPolicy
  name: hotels-v1
  namespace: travel-agency
  resourceVersion: "203608"
  uid: 82c2ee67-8414-4373-a08d-2efadacd1a8c
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-agency/sa/travels
  selector:
    matchLabels:
      app: hotels
      version: v1
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 1
  labels:
    kiali_wizard: AuthorizationPolicy
  name: insurances-v1
  namespace: travel-agency
  resourceVersion: "203606"
  uid: 26a3625d-cbc0-4d07-810a-f4376e859c9a
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-agency/sa/travels
  selector:
    matchLabels:
      app: insurances
      version: v1
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 3
  labels:
    kiali_wizard: AuthorizationPolicy
  name: mysqldb-v1
  namespace: travel-agency
  resourceVersion: "204437"
  uid: 357ee20f-62fd-4688-8417-38d4dc68219b
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-agency/sa/flights
        - cluster.local/ns/travel-agency/sa/hotels
        - cluster.local/ns/travel-agency/sa/cars
        - cluster.local/ns/travel-agency/sa/insurances
  selector:
    matchLabels:
      app: mysqldb
      version: v1
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 1
  labels:
    kiali_wizard: AuthorizationPolicy
  name: travels-v1
  namespace: travel-agency
  resourceVersion: "203613"
  uid: ae0908ce-548f-4278-bb48-ec107eeba410
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-portal/sa/default
  selector:
    matchLabels:
      app: travels
      version: v1
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 1
  labels:
    kiali_wizard: AuthorizationPolicy
  name: travels-v2
  namespace: travel-agency
  resourceVersion: "203615"
  uid: b2919af2-7c18-46b2-9156-db9759cfc951
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-portal/sa/default
  selector:
    matchLabels:
      app: travels
      version: v2
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  creationTimestamp: "2023-03-22T12:22:29Z"
  generation: 1
  labels:
    kiali_wizard: AuthorizationPolicy
  name: travels-v3
  namespace: travel-agency
  resourceVersion: "203616"
  uid: c52c6fa7-9b01-4663-b059-ebbf51544aa5
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/travel-portal/sa/default
  selector:
    matchLabels:
      app: travels
      version: v3
---
